--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-  "name": "geniv/nette-translator",
+  "name": "geniv/nette-prtpe",
   "description": "Newsletter MailerLite service",
   "keywords": [
     "nette",
-    "newsletter",
-    "mailerlite",
+    "prtpe",
+    "payment",
     "geniv"
   ],
   "license": "GPL-3.0",
@@ -16,7 +16,7 @@
   ],
   "require": {
     "php": ">=5.6.0",
-    "mailerlite/mailerlite-api-v2-php-sdk": ">=0.2.1"
+    "curl/curl": "^1.6"
   },
   "autoload": {
     "classmap": [
