--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "payment",
     "geniv"
   ],
-  "license": "GPL-3.0",
+  "license": "MIT",
   "authors": [
     {
       "name": "Radek Fryšták",
